k8s/hq-kevinryan-io/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-mongodb
  namespace: hq-kevinryan-io
spec:
  clusterIP: None
  selector:
    app: librechat-mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
