k8s/hq-kevinryan-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat
  namespace: hq-kevinryan-io
spec:
  selector:
    app: librechat
  ports:
    - port: 80
      targetPort: 3080
