k8s/hq-kevinryan-io/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librechat
  namespace: hq-kevinryan-io
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hq.kevinryan.io`)
      kind: Rule
      services:
        - name: librechat
          port: 80
  tls: {}
